; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_execute.c_exec_context_get_effective_ioprio.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_execute.c_exec_context_get_effective_ioprio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }

@IOPRIO_WHO_PROCESS = common dso_local global i32 0, align 4
@IOPRIO_CLASS_BE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @exec_context_get_effective_ioprio(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = call i32 @assert(%struct.TYPE_4__* %5)
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  store i32 %14, i32* %2, align 4
  br label %25

15:                                               ; preds = %1
  %16 = load i32, i32* @IOPRIO_WHO_PROCESS, align 4
  %17 = call i32 @ioprio_get(i32 %16, i32 0)
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %15
  %21 = load i32, i32* @IOPRIO_CLASS_BE, align 4
  %22 = call i32 @IOPRIO_PRIO_VALUE(i32 %21, i32 4)
  store i32 %22, i32* %2, align 4
  br label %25

23:                                               ; preds = %15
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %20, %11
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @assert(%struct.TYPE_4__*) #1

declare dso_local i32 @ioprio_get(i32, i32) #1

declare dso_local i32 @IOPRIO_PRIO_VALUE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
